--- a/MagnusApp/MagnusApp/Components/Account/Pages/Login.razor.css
+++ b/MagnusApp/MagnusApp/Components/Account/Pages/Login.razor.css
@@ -77,13 +77,13 @@
 
 .design {
     display: block;
- /*   width: 90%;*/
+    /*width: 90%;*/
     padding: .375rem .75rem;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
     color: #212529;
-    background-color: #fff;
+    background-color: #E0D2F8;
     background-clip: padding-box;
     border: 1px solid #ced4da;
     -webkit-appearance: none;
